--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,20 @@
             <li><%= link_to "Link2", "/path2"  %></li>
             <li><%= link_to "Link3", "/path3"  %></li>
           </ul>
+          <ul class="nav navbar-nav navbar-right col-md-4">
+            <% if current_user %>
+            <li class="col-md-8 user-name">
+              <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe, edit_user_registration_path, title: "Edit Profile" %>
+            </li>
+            <li class="col-md-1">&nbsp;</li>
+            <li class="col-md-4 logout"><%= link_to('Logout', destroy_user_session_path, class: "btn btn-xs btn-danger", title: "Logout", :method => :delete) %> </li>
+            <% else %>
+              <li class="col-md-3"><%= link_to 'Login', new_user_session_path %> </li>
+              <liclass="col-md-3"><%= link_to 'Signup', new_user_registration_path %> </li>
+
+            <% end %>
+
+          </ul>
         </div>
       </div>
     </div>
