--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="row mainBody">
+
+  <div class="col-md-6 col-md-offset-3 header">
+    <h1 class="centered">PostShareIt</h1>
+    <h2 class="centered">Sell Your Stuff</h2>
+  </div>
+  <div class="col-md-12 centered">
+    <p>You know Jim would love all your EBay and CraigsList ads for music equipment but how in the .... do you easily share all your postings?</p>
+    <p>Share post it, let's you combine all your articles into an easy to share webpage or pdf all linked up to the original articles.</p> 
+  </div>
+
+</div>
