Prototype app page

--- a/app/assets/stylesheets/mainapp.scss
+++ b/app/assets/stylesheets/mainapp.scss
@@ -1,18 +1,7 @@
-.controlbody{
-  border: 1px solid black;
-}
-.controlhead{
-  text-align:center;
-}
-.sidenavel{
-  border-radius:1em;
-  border: 2px solid blue;
-  background-color:#ccffff;
-  margin-top:5px;
-  margin-bottom:5px;
-}
-.sidenavel:hover{
-  color:white;
+.mainappapp{
+cursor:hand;
 
-
+}
+.mainappimage:hover {
+  cursor:hand;
 }
