--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
     <h2 class="centered">Sell Your Stuff</h2>
   </div>
   <div class="col-md-12 centered">
-    <p>You know Jim would love all your EBay and CraigsList ads for music equipment but how in the .... do you easily share all your postings?</p>
+    <p>You know Jim would love all your eBay and CraigsList ads for music equipment but how in the .... do you easily share all your postings?</p>
     <p>Share post it, let's you combine all your articles into an easy to share webpage or pdf all linked up to the original articles.</p> 
   </div>
 
